--- a/.github/workflows/build-deploy-demo.yml
+++ b/.github/workflows/build-deploy-demo.yml
@@ -37,7 +37,7 @@ jobs:
         uses: seanmiddleditch/gha-setup-ninja@v5
 
       - name: Install Qt for host architecture
-        uses: Kidev/install-qt-action@v4.2.1
+        uses: Kidev/install-qt-action@v4.2.0
         with:
           version: ${{ env.qt_version }}
           host: 'all_os'
@@ -46,6 +46,8 @@ jobs:
           set-env: 'true'
           dir: ${{ env.workspace_root }}
           modules: ${{ env.qt_modules }}
+          aqtsource: 'git+https://github.com/miurahr/aqtinstall.git@master'
+          extra: '--autodesktop'
 
       - name: Verify Qt Installation
         shell: bash
