--- a/.github/workflows/build-deploy-demo.yml
+++ b/.github/workflows/build-deploy-demo.yml
@@ -46,7 +46,7 @@ jobs:
           set-env: 'true'
           dir: ${{ env.workspace_root }}
           modules: ${{ env.qt_modules }}
-          aqtsource: 'git+https://github.com/miurahr/aqtinstall.git@master'
+          aqtsource: 'git+https://github.com/miurahr/aqtinstall.git'
           extra: '--autodesktop'
 
       - name: Verify Qt Installation
