--- a/.github/workflows/build-deploy-demo.yml
+++ b/.github/workflows/build-deploy-demo.yml
@@ -47,6 +47,18 @@ jobs:
           dir: ${{ env.workspace_root }}
           modules: ${{ env.qt_modules }}
 
+      - name: Install Qt
+        uses: Kidev/install-qt-action@v4.3.0
+        with:
+          version: '6.8.1'
+          host: 'windows'
+          target: 'desktop'
+          arch: 'linux_gcc_64'
+          aqtsource: 'git+https://github.com/Kidev/aqtinstall.git@install_qt_commercial'
+          use-commercial: true
+          user: ${{ secrets.QT_USERNAME }}
+          password: ${{ secrets.QT_PASSWORD }}
+
       - name: Verify Qt Installation
         shell: bash
         run: |
