--- a/.github/workflows/build-deploy-demo.yml
+++ b/.github/workflows/build-deploy-demo.yml
@@ -7,12 +7,9 @@ jobs:
     name: "Build and deploy"
     env:
       workspace_root: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools'
-      qt_version: '6.8.1'
-      qt_host_arch: 'gcc_64'
-      qt_target_arch: 'wasm_singlethread'
-      qt_modules: 'qtquick3d qtshadertools'
-      qt_root: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools/Qt'
       qt_root_folder: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools'
+      qt_version: '6.8.1'
+      qt_target_arch: 'wasm_singlethread'
       target_folder: 'QtQuick3D-Tools'
       source_folder: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools/build/example'
     runs-on: ubuntu-24.04
@@ -38,10 +35,10 @@ jobs:
       - name: Install Qt
         uses: jdpurcell/install-qt-action@v5
         with:
-          version: '6.8.1'
+          version: ${{ env.qt_version }}
           target: 'wasm'
-          arch: 'wasm_singlethread'
-          modules: ${{ env.qt_modules }}
+          arch: ${{ env.qt_target_arch }}
+          modules: 'qtquick3d qtshadertools'
           dir: ${{ env.qt_root_folder }}
           use-naqt: true
           setup-python: false
@@ -50,10 +47,7 @@ jobs:
         shell: bash
         run: |
           make web \
-            QT_ROOT=${{ env.qt_root }} \
-            QT_VERSION=${{ env.qt_version }} \
-            QT_HOST_ARCH=${{ env.qt_host_arch }} \
-            QT_TARGET_ARCH=${{ env.qt_target_arch }}
+            QT_VERSION=${{ env.qt_version }}
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
