--- a/.github/workflows/build-deploy-demo.yml
+++ b/.github/workflows/build-deploy-demo.yml
@@ -8,8 +8,8 @@ jobs:
     env:
       workspace_root: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools'
       qt_root_folder: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools'
-      qt_version: '6.5.3'
-      qt_target_arch: 'wasm_singlethread'
+      qt_version: '6.4.3'
+      qt_target_arch: 'wasm_32'
       target_folder: 'QtQuick3D-Tools'
       source_folder: '/home/runner/work/QtQuick3D-Tools/QtQuick3D-Tools/build/example'
     runs-on: ubuntu-24.04
